--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,23 @@
   <description>Ejemplo de examen final</description>
   <packaging>war</packaging>
     
+      <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>14</maven.compiler.source>
+    <maven.compiler.target>14</maven.compiler.target>
+  </properties>
+  
+  
     <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
+<!-- https://mvnrepository.com/artifact/junit/junit -->
+<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.1</version>
+    <scope>test</scope>
+</dependency>
+
+
   </dependencies>
 
   <build>
